--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,16 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Base64ValidityTestActivity"
+            android:exported="false" />
+        <activity
             android:name=".EmptyActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
         <activity
-            android:name=".Base64ValidityTestActivity"
+            android:name=".ActivityPlayStoreSearchIntentExample"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
