--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.facebook.stetho:stetho:1.6.0'
+    implementation("com.google.guava:guava:32.0.0-android")
 }
