--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityPlayStoreSearchIntentExample"
+            android:exported="false" />
+        <activity
             android:name=".Base64ValidityTestActivity"
             android:exported="false" />
         <activity
@@ -23,7 +26,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".ActivityPlayStoreSearchIntentExample"
+            android:name=".MainActivityNew"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
