--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:exported="false" />
         <activity
             android:name=".MainActivityNew"
+            android:exported="false" />
+        <activity
+            android:name=".SpanAbleTestActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
